Devotional products fetched from api

--- a/react/package.json
+++ b/react/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "proxy": "https://sridiya.com",
+
     "lint": "eslint .",
     "preview": "vite preview"
   },
